[gd_scene load_steps=7 format=3 uid="uid://d14763eeahkyr"]

[ext_resource type="Script" path="res://Scene/Pages_Utilisateur/main_level.gd" id="1_asej1"]
[ext_resource type="Texture2D" uid="uid://8mrahfggvb3t" path="res://Background LVL/background_essaie4.webp" id="2_j6f6j"]

[sub_resource type="SystemFont" id="SystemFont_rqwya"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_nhl1d"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_l06u4"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_rq71a"]
font_names = PackedStringArray("Impact")

[node name="main_level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_asej1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 3.0
offset_right = 7.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j6f6j")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="séparation" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0.568627, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.568627, 1)
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = SubResource("SystemFont_rqwya")
theme_override_font_sizes/font_size = 50
text = "LEVELS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="séparation2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button_lvl_1" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nhl1d")
theme_override_font_sizes/font_size = 40
text = "LEVEL 1"

[node name="séparation" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button_lvl_2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_l06u4")
theme_override_font_sizes/font_size = 40
text = "LEVEL 2"

[node name="séparation3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Button_lvl_3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_rq71a")
theme_override_font_sizes/font_size = 40
text = "LEVEL 3"
